--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,4 @@ project(game1)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 
-add_executable(${PROJECT_NAME} WIN32 src/main.cpp)
-#include(src/CMakeLists.txt)
+add_executable(${PROJECT_NAME} WIN32 src/main.cpp src/Window.cpp src/MainWindow.cpp)
