--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,6 @@ add_executable(${PROJECT_NAME} WIN32
 
 target_link_libraries(${PROJECT_NAME}
 	d3d11.lib)
+
+target_precompile_headers(${PROJECT_NAME}
+	PRIVATE src/pch.h)
