--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 
 add_executable(${PROJECT_NAME} WIN32
 	src/main.cpp
+	src/Exception.cpp
 	src/Window.cpp
 	src/MainWindow.cpp
 	src/Graphics.cpp
