add shaders and DrawTriangle + format rules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,12 @@ add_executable(${PROJECT_NAME} WIN32
 
 target_link_libraries(${PROJECT_NAME}
 	d3d11.lib
+	d3dcompiler.lib
 	dxguid.lib
 	)
+
+add_subdirectory(shaders)
+add_dependencies(${PROJECT_NAME} shaders)
 
 target_precompile_headers(${PROJECT_NAME}
 	PRIVATE src/pch.h)
