create Buffer classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,15 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 
 add_executable(${PROJECT_NAME} WIN32
 	src/main.cpp
+
 	src/Exception.cpp
-	src/Window.cpp
-	src/MainWindow.cpp
-	src/Graphics.cpp
 	src/GfxDebug.cpp
+	src/Graphics.cpp
+	src/IndexBuffer.cpp
+	src/MainWindow.cpp
+	src/VertexBuffer.cpp
+	src/Window.cpp
+
 	src/resources.rc)
 
 target_link_libraries(${PROJECT_NAME}
