add Texture/SamplerState classes, fix exception handlers, add target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,9 @@ add_executable(${PROJECT_NAME} WIN32
 	src/IndexBuffer.cpp
 	src/MainWindow.cpp
 	src/PixelShader.cpp
+	src/SamplerState.cpp
 	src/Shader.cpp
+	src/Texture.cpp
 	src/utils.cpp
 	src/VertexBuffer.cpp
 	src/VertexShader.cpp
@@ -22,14 +24,26 @@ add_executable(${PROJECT_NAME} WIN32
 
 	src/resources.rc)
 
+add_subdirectory(shaders)
+add_subdirectory(vendor)
+
+add_dependencies(${PROJECT_NAME}
+	assets
+	shaders)
+
+add_custom_target(assets
+	COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/assets ${PROJECT_BINARY_DIR}/assets)
+
+target_include_directories(${PROJECT_NAME} PRIVATE
+	vendor)
+
 target_link_libraries(${PROJECT_NAME}
 	d3d11.lib
 	d3dcompiler.lib
 	dxguid.lib
-	)
+	windowscodecs.lib
 
-add_subdirectory(shaders)
-add_dependencies(${PROJECT_NAME} shaders)
+	WICTextureLoader)
 
 target_precompile_headers(${PROJECT_NAME}
 	PRIVATE src/pch.h)
