add texture shaders and finish textured cube

--- a/shaders/CMakeLists.txt
+++ b/shaders/CMakeLists.txt
@@ -1,8 +1,14 @@
 add_custom_target(shaders)
 
-set(SHADER_FILES vertex.hlsl pixel.hlsl)
+set(SHADER_FILES
+	vertex.hlsl
+	v_texture.hlsl
+	pixel.hlsl
+	p_texture.hlsl)
 set_source_files_properties(vertex.hlsl PROPERTIES PROFILE "vs_4_0")
+set_source_files_properties(v_texture.hlsl PROPERTIES PROFILE "vs_4_0")
 set_source_files_properties(pixel.hlsl PROPERTIES PROFILE "ps_4_0")
+set_source_files_properties(p_texture.hlsl PROPERTIES PROFILE "ps_4_0")
 
 foreach(FILE ${SHADER_FILES})
 	get_source_file_property(PROFILE ${FILE} PROFILE)
